conditional for clouds added to group_vars/all

--- a/group_vars/all/all.yml
+++ b/group_vars/all/all.yml
@@ -10,8 +10,10 @@
 workshop_prefix:                     ""
 owner_email:                         ""
 expiration_date:                     ""
+aws:                                 "true"
+azure:                               "false"
+gcc:                                 "false"
 
-   
 #######################################################################################
 # ANSIBLE ROLE KEY                   VALUE
 #######################################################################################
