--- a/ansible.cfg
+++ b/ansible.cfg
@@ -214,7 +214,7 @@ remote_user = ec2-user
 # wanting to use, for example, IP information from one group of servers
 # without having to talk to them in the same playbook run to get their
 # current IP information.
-fact_caching = redis
+# fact_caching = redis
 
 
 # retry files
