--- a/_ansible_tower.yml
+++ b/_ansible_tower.yml
@@ -8,20 +8,18 @@
 - name: Provision in AWS
   hosts: localhost
   roles:
-    - aws-infra-role
-  when: aws
+    - { role: aws-infra-role, when: aws }
+
 
 - name: Provision in Azure
   hosts: localhost
   roles:
-    - azure-infra-role
-  when: azure
+    - { role: azure-infra-role, when: azure }
 
 - name: Provision in GCC
   hosts: localhost
   roles:
-    - gcc-infra-role
-  when: gcc
+    - { role: gcc-infra-role, when: gcc }
 
 # Workshop
 - name: Ansible Tower | Configure nodes
