--- a/_ansible_tower.yml
+++ b/_ansible_tower.yml
@@ -10,16 +10,15 @@
   roles:
     - { role: aws-infra-role, when: aws }
 
+# - name: Provision in Azure
+#   hosts: localhost
+#   roles:
+#     - { role: azure-infra-role, when: azure }
 
-- name: Provision in Azure
-  hosts: localhost
-  roles:
-    - { role: azure-infra-role, when: azure }
-
-- name: Provision in GCC
-  hosts: localhost
-  roles:
-     - { role: gcc-infra-role, when: gcc }
+# - name: Provision in GCC
+#   hosts: localhost
+#   roles:
+#      - { role: gcc-infra-role, when: gcc }
 
 # Workshop
 - name: Ansible Tower | Configure nodes
