aws-infra-ansible-role updates

--- a/_ansible_tower.yml
+++ b/_ansible_tower.yml
@@ -9,7 +9,7 @@
   hosts: localhost
   become: no
   roles:
-    - { role: aws-infra-role, when: aws }
+    - { role: aws-ansible-workshop-role, when: aws }
 
 # - name: Provision in Azure
 #   hosts: localhost
