--- a/_ansible_tower.yml
+++ b/_ansible_tower.yml
@@ -33,7 +33,7 @@
 - name: Ansible Tower Workshop | Configure nodes
   become: yes
   remote_user: "{{ system_user }}"
-  hosts: tower_masters
+  hosts: "{{ workshop_prefix }}-inventory"
   roles:
     - { role: subscription-manager-role }
     - { role: epel-role                 }
