working on tower inventory

--- a/_ansible_tower.yml
+++ b/_ansible_tower.yml
@@ -26,14 +26,14 @@
 - name: Tower Inventory Sync
   hosts: localhost
   become: no
-  roles:
+  roles: 
     - { role: tower-inventory-role }
 
 # Workshop
 - name: Ansible Tower Workshop | Configure nodes
   become: yes
   remote_user: "{{ system_user }}"
-  hosts: tag_DeleteTag_changeme_bsollar_redhat_com
+  hosts: ec2
   roles:
     - { role: subscription-manager-role }
     - { role: epel-role                 }
