working on tower inventory

--- a/_ansible_tower.yml
+++ b/_ansible_tower.yml
@@ -32,7 +32,7 @@
 # Workshop
 - name: Ansible Tower Workshop | Configure nodes
   become: yes
-  hosts: changeme-inventory
+  hosts: all
   roles:
     - { role: subscription-manager-role }
     - { role: epel-role                 }
